# autd3-firmware

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  autd_firmware_writer.ps1  build.py  codecov.yml
.github/workflows/: build.yml  coverage.yml
src/cpu/: Makefile.toml  README.md  gen_param.py
src/cpu/inc/: ecat.h  params.h  params_cpu.h  params_fpga.h  utils.h
src/cpu/src/: app.c  buf.c  utils.c
src/cpu/src/app/: app.h  sync.h
src/cpu/src/op/: clear.c  clear.h  clk.c  cpu_gpio.c  debug.c  debug.h  foci_stm.c  foci_stm.h  focus_stm.c  focus_stm.h  force_fan.c  force_fan.h  gain.c  gain.h  gain_stm.c  gain_stm.h  gpio_in.c  info.c  info.h  mod.c  mod.h  mod_delay.c  mod_delay.h  output_mask.c  phase_corr.c  phase_filter.c  pulse_width_encoder.c  reads_fpga_info.c  reads_fpga_info.h  reads_fpga_state.c  silencer.c  silencer.h  stm.h  sync.c  utils.c  validate.h
src/cpu/tests/: CMakeLists.txt  app.cpp  gtest.cmake  main.cpp  utils.cpp
src/cpu/tests/inc/: app.h  iodefine.h  kernel.h  sync.h  utils.hpp
src/cpu/tests/op/: CMakeLists.txt  clear.cpp  clk.cpp  cpu_gpio.cpp  debug.cpp  foci_stm.cpp  focus_stm.cpp  force_fan.cpp  gain.cpp  gain_stm.cpp  gpio_in.cpp  info.cpp  mod.cpp  mod_delay.cpp  nop.cpp  output_mask.cpp  phase_corr.cpp  phase_filter.cpp  pulse_width_encoder.cpp  reads_fpga_info.cpp  reads_fpga_state.cpp  silencer.cpp  sync.cpp
src/fpga/: .gitignore  Makefile.toml  README.md  asin.coe  asin.py  atan.coe  build.ps1  build.sh  clear.ps1  configuration.tcl  find_vivado.py  gen_clk.py  gen_cnt_state_machine.py  proj_gen.tcl  sim.ps1
(+161 files in other folders)
